--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ function injectSantaHats(teamEl){
 }
 
 function renderTeams(teams,teamSize,subsPerTeam){
-  const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
+  const teamNames=["The Merry Stickmen", "The Stick-mas Miracles"];
   shuffle(teamNames);
   const out=document.getElementById("output");
   out.innerHTML="";
