--- a/index.html
+++ b/index.html
@@ -177,9 +177,11 @@
       animation-iteration-count: infinite, infinite;
     }
 
-    @keyframes fall {
-      to { transform: translateY(110vh); }
-    }
+   @keyframes fall {
+  from { top: -10px; }
+  to { top: 110vh; }
+}
+
 
     @keyframes sway {
       0% { transform: translateX(0); }
