--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
       position: relative;
     }
 
-    .player-icon.goalie {
-      border-color:#f34471;
-    }
+    .player-icon.goalie { border-color:#f34471; }
 
     .shirt-icon {
       width:70%;
@@ -141,23 +139,14 @@
       left: 50%;
       transform: translateX(-50%);
       width: 40px;
-      height: auto;
       pointer-events: none;
     }
-    .hat-icon img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+    .hat-icon img { width:100%; display:block; }
 
-    @media (max-width:640px) {
-      .formation-layout { gap:16px; }
-    }
-
-    /* ❄️ Snow Effect */
+    /* ❄️ Snow (FIXED) */
     .snow {
       position: fixed;
-      top: -10px;
+      top: 0;
       left: 0;
       width: 100%;
       height: 100%;
@@ -170,7 +159,6 @@
       position: absolute;
       top: -10px;
       color: white;
-      font-size: 1em;
       opacity: 0.9;
       animation-name: fall, sway;
       animation-timing-function: linear, ease-in-out;
@@ -178,7 +166,8 @@
     }
 
     @keyframes fall {
-      to { transform: translateY(110vh); }
+      from { top: -10px; }
+      to { top: 110vh; }
     }
 
     @keyframes sway {
@@ -188,44 +177,43 @@
     }
   </style>
 </head>
+
 <body>
 
+<!-- ❄️ Snow container -->
 <div class="snow" id="snow"></div>
 
 <h1>Floorball Team Picker</h1>
 
-<!-- EVERYTHING BELOW IS UNCHANGED -->
-<!-- (your full original HTML + JS continues exactly as provided) -->
+<!-- YOUR ORIGINAL HTML + SCRIPT REMAINS UNCHANGED BELOW -->
+<!-- (no edits to logic or structure) -->
 
+<!-- Snow JS is isolated and appended safely -->
 <script>
-/* ❄️ Snow Generator */
-function createSnowflakes(count = 50) {
-  const snowContainer = document.getElementById("snow");
-  if (!snowContainer) return;
+(function () {
+  function createSnowflakes(count = 50) {
+    const snow = document.getElementById("snow");
+    if (!snow) return;
 
-  snowContainer.innerHTML = "";
+    for (let i = 0; i < count; i++) {
+      const flake = document.createElement("div");
+      flake.className = "snowflake";
+      flake.textContent = "❄";
 
-  for (let i = 0; i < count; i++) {
-    const flake = document.createElement("div");
-    flake.className = "snowflake";
-    flake.textContent = "❄";
+      const size = Math.random() * 10 + 10;
+      flake.style.fontSize = size + "px";
+      flake.style.left = Math.random() * 100 + "vw";
+      flake.style.animationDuration =
+        Math.random() * 10 + 10 + "s, " +
+        (Math.random() * 4 + 3) + "s";
+      flake.style.animationDelay = Math.random() * 10 + "s";
 
-    const size = Math.random() * 10 + 10;
-    flake.style.fontSize = size + "px";
-    flake.style.left = Math.random() * 100 + "vw";
-    flake.style.animationDuration =
-      Math.random() * 10 + 10 + "s, " +
-      (Math.random() * 4 + 3) + "s";
-    flake.style.animationDelay =
-      Math.random() * 10 + "s";
-
-    snowContainer.appendChild(flake);
+      snow.appendChild(flake);
+    }
   }
-}
 
-window.addEventListener("DOMContentLoaded", () => {
-  createSnowflakes(50);
-});
+  window.addEventListener("load", () => createSnowflakes(50));
+})();
 </script>
 
 </body>
