--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       max-width: 600px;
       margin: 40px auto;
       padding: 20px;
-      background: #f9f9f9;
+      background: #ebebeb;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
