--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       max-width: 600px;
       margin: 40px auto;
       padding: 20px;
-      background: #ebebeb;
+      background: #f9f9f9;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
@@ -112,7 +112,9 @@
       position: relative;
     }
 
-    .player-icon.goalie { border-color:#f34471; }
+    .player-icon.goalie {
+      border-color:#f34471;
+    }
 
     .shirt-icon {
       width:70%;
@@ -133,56 +135,28 @@
 
     .player-name { margin-top:6px; font-weight:600; text-align:center; }
 
+    /* Santa Hat */
     .hat-icon {
       position: absolute;
       top: -15px;
       left: 50%;
       transform: translateX(-50%);
       width: 40px;
+      height: auto;
       pointer-events: none;
     }
-    .hat-icon img { width:100%; display:block; }
-
-    /* ❄️ Snow (FIXED) */
-    .snow {
-      position: fixed;
-      top: 0;
-      left: 0;
+    .hat-icon img {
       width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 9999;
-      overflow: hidden;
+      height: auto;
+      display: block;
     }
 
-    .snowflake {
-      position: absolute;
-      top: -10px;
-      color: white;
-      opacity: 0.9;
-      animation-name: fall, sway;
-      animation-timing-function: linear, ease-in-out;
-      animation-iteration-count: infinite, infinite;
-    }
-
-    @keyframes fall {
-      from { top: -10px; }
-      to { top: 110vh; }
-    }
-
-    @keyframes sway {
-      0% { transform: translateX(0); }
-      50% { transform: translateX(20px); }
-      100% { transform: translateX(0); }
+    @media (max-width:640px) {
+      .formation-layout { gap:16px; }
     }
   </style>
 </head>
-
 <body>
-
-<!-- ❄️ Snow container -->
-<div class="snow" id="snow"></div>
-
 <h1>Floorball Team Picker</h1>
 
 <svg id="shirt-template" style="display:none" viewBox="0 0 295.526 295.526" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
@@ -519,36 +493,5 @@ window.addEventListener("DOMContentLoaded",()=>{
   document.getElementById("names").addEventListener("input",updateClearButtonVisibility);
 });
 </script>
-</body>
-
-
-<!-- Snow JS is isolated and appended safely -->
-<script>
-(function () {
-  function createSnowflakes(count = 50) {
-    const snow = document.getElementById("snow");
-    if (!snow) return;
-
-    for (let i = 0; i < count; i++) {
-      const flake = document.createElement("div");
-      flake.className = "snowflake";
-      flake.textContent = "❄";
-
-      const size = Math.random() * 10 + 10;
-      flake.style.fontSize = size + "px";
-      flake.style.left = Math.random() * 100 + "vw";
-      flake.style.animationDuration =
-        Math.random() * 10 + 10 + "s, " +
-        (Math.random() * 4 + 3) + "s";
-      flake.style.animationDelay = Math.random() * 10 + "s";
-
-      snow.appendChild(flake);
-    }
-  }
-
-  window.addEventListener("load", () => createSnowflakes(50));
-})();
-</script>
-
 </body>
 </html>
